tests/should_fail/bug/1544_0.stderr
error: Unsupported type: dyn std::fmt::Debug
 --> 1544_0.rs:4:25
  |
4 | pub fn unsupported_type(_x: &dyn std::fmt::Debug) {}
  |                         ^^

error: aborting due to 1 previous error

